--- a/static/base.css
+++ b/static/base.css
@@ -33,6 +33,9 @@ main{
     top:0;
     left:0;
 }
+.back img{
+    width: 22px;
+}
 .expand:hover{
     cursor: pointer;
     transform: scale(1.1);
