--- a/templates/player.html
+++ b/templates/player.html
@@ -15,7 +15,7 @@
     }
     .msg1, .msg2{
         width: 100%;
-        height: 45px;
+        min-height: 45px;
         display: flex;
         align-items: center;
         padding: 10px 0px;
@@ -70,19 +70,7 @@
     </dialog>
     <dialog id="historyModal">
         <a class="back expand"   title="close Modal" id="closeModalBtn2" ><img src="/static/close.png" alt="close"></a>
-        <div id="historyContent">
-            <div class="msg1">
-                <span class="msg">
-                    message1
-                </span>
-            </div>
-            <div class="msg2">
-                <span class="msg">
-                    message1
-                </span>
-            </div>
-      
-        </div>
+        <div id="historyContent"></div>
     </dialog>
 {% endblock content %}
 {% block javascript%}
