--- a/templates/recorder.html
+++ b/templates/recorder.html
@@ -15,7 +15,7 @@
         #stop{
             display: none;
         }
-        #save_filename{
+        #save_filename, .special{
             display: block;
             margin: 10px auto;
             border: 0;
@@ -50,16 +50,27 @@
     <button id="start" class="record expand" title="play"><img src="/static/play.png" alt="play"></button>
     <button id="stop" class="record expand" title="stop"><img src="/static/stop.png" alt="stop"></button>
     <dialog id="filename_modal">
-        <label for="filename">Nombre del audio</label>
-        <input type="text" id="filename">
-        <button class="record expand" id="save_filename">Guardar</button>
+        <div id="audio_name">
+            <label for="filename">Nombre del audio</label>
+            <input type="text" id="filename">
+            <button class="record expand" id="save_filename">Guardar</button>
+        </div>
+        <h1 id="wait_header" hidden>Por favor espere</h1>
+        <p id="wait_text"></p>
+        <span id="upload_time"></span>
+        <div id="error_options" hidden>
+            <button class="record expand special" id="retry_btn">Reintentar</button>
+            <button class="record expand special" id="save_btn">Guardar audios</button>
+        </div>
+        <button class="record expand special" hidden id="close_modal"> Cerrar</button>
     </dialog>  
 {% endblock content %}
 
 {% block javascript%}
     <script src="/static/js/socket.io.js"></script>
     <script src="/static/js/socket.config.js"></script>
-    <script src="/static/js/recordv.0.0.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lamejs/1.2.1/lame.min.js" integrity="sha512-xT0S/xXvkrfkRXGBPlzZPCAncnMK5c1N7slRkToUbv8Z901aUEuKO84tLy8dWU+3ew4InFEN7TebPaVMy2npZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/static/js/recordv.0.0.2.js"></script>
     <script>
         let start = document.getElementById('start'),
             stopBtn = document.getElementById('stop'),
@@ -67,6 +78,13 @@
             micRecorder,
             speaker_stream,
             mic_stream
+        const text_element = document.getElementById("wait_text"),
+            close_modal = document.getElementById("close_modal"),
+            wait_h1 = document.getElementById("wait_header"),
+            wait_text = document.getElementById("wait_text"),
+            error_options = document.getElementById("error_options");
+
+        close_modal.addEventListener("click", ()=> document.getElementById("filename_modal").close())
 
         start.addEventListener('click', async function () {
             socket.connect();
@@ -89,8 +107,37 @@
         document.getElementById("save_filename").onclick = () => {
             let filename = document.getElementById("filename").value
             socket.emit('stopRecord', filename)
-            document.getElementById("filename_modal").close()
+            wait_h1.hidden = false
+            wait_text.innerText = "Procesando audio..."
+            document.getElementById("audio_name").hidden = true
         }
+
+        socket.on('success_saving', () => {
+            text_element.style.color = "#0e8843"
+            text_element.innerHTML = "Archivo guardado con éxito";
+            wait_h1.hidden = true
+            close_modal.hidden = false
+        });
+
+        socket.on('error_saving', () => {
+            wait_h1.hidden = true
+            text_element.style.color = "#9b0909"
+            text_element.innerHTML = "Ha ocurrido un error guardando el audio en el servidor. ¿Que desea hacer?"
+            error_options.hidden = false
+            close_modal.hidden = false
+        });
+
+        document.getElementById("retry_btn").addEventListener("click", ()=>{
+            let filename = document.getElementById("filename").value;
+            wait_h1.hidden = false;
+            retryMedia(filename);
+        })
+
+        document.getElementById("save_btn").addEventListener("click", ()=>{
+            let filename = document.getElementById("filename").value;
+            downloadMedia(filename)
+        })
+
 
         function stopRecord(recorder){
             if(recorder.state === "recording"){
