--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,17 @@
             {% endblock %}
         </div>
     </main>
+    <script>
+        function save_error(page, msg){
+            const data = new FormData()
+            data.append("page",page)
+            data.append("error",msg)
+            fetch("/save_error",{
+                method: "POST",
+                body:data
+            })
+        }
+    </script>
     {% block javascript %}
     {% endblock %}
 </body>
