--- a/templates/upload_file.html
+++ b/templates/upload_file.html
@@ -1,84 +1,132 @@
 {% extends "base.html" %}
 {% block head %}
-  <style>
-    h1{
+<style>
+    h1 {
         font-size: 30px;
     }
-  </style>
+
+    #drop_zone {
+        border: 1px dashed blue;
+        width: 200px;
+        height: 100px;
+      }
+</style>
+<script src="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone-min.js"></script>
+<link href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" rel="stylesheet" type="text/css" />
 {% endblock head %}
-{% block content %} 
-    <a href="/" class="back expand" title="back"><img src="/static/back.png" alt="back"></a>
-    <h1>Subir archivo</h1>
-    <button type="button" id="select">Seleccionar archivo</button>
-    <input type="file" name="audio" id="audio" hidden>
-    <p id="text"></p>
-
-{% endblock content %}
-
-{% block javascript %}
-  <script>
-    const input_file = document.querySelector('input[type="file"]'),
-        text_element = document.getElementById("text");
-
-    document.getElementById("select").onclick = ()=>{
-        input_file.click()
-    }
-    input_file.addEventListener("change", async ()=>{
-        if(!checkFile()){
-            text_element.innerText = "Archivo inválido, solo puede subir archivos de audio (ejemplo: .mp3, .wav)"
-            return
-        }
-        const data = new FormData();
-        data.append('audio', input_file.files[0]);
-        text_element.innerHTML = "Subiendo archivo <span>0%</span>"
-        const ajax = new XMLHttpRequest();
-        ajax.upload.addEventListener("progress", progressHandler, false);
-        ajax.addEventListener("loadend", completeHandler, false);
-        ajax.addEventListener("error", errorHandler, false);
-        ajax.addEventListener("abort", errorHandler, false);
-        ajax.open("POST", "/upload_file"); 
-        ajax.send(data);
-    })
-
-    function checkFile(){
-        const audio_formats = ['MP3', 'WAV', 'AAC', 'FLAC', 'OGG', 'WMA', 'ALAC', 'AIFF', 'M4A', 'AC3'];
-        let ext = input_file.files[0].name.split('.');
-        ext = ext[ext.length - 1];
-        return audio_formats.includes(ext.toUpperCase())
-    }
-    
-    function progressHandler(event) {
-        const percent = (event.loaded / event.total) * 100;
-        const span = text_element.querySelector("span");
-        if(span){
-            console.log(Math.round(percent) + "%")
-            span.innerText = Math.round(percent) + "%"
-            console.log(text_element.innerText)
-        }
-    }
+{% block content %}
+<!-- 
+<div
+  id="drop_zone"
+  ondrop="dropHandler(event);"
+  ondragover="dragOverHandler(event);">
+  <p>Drag one or more files to this <i>drop zone</i>.</p>
+</div>
+-->
+<script>
+    function dropHandler(ev) {
+        console.log("File(s) dropped");
       
-      function completeHandler(event) {
-        try{
-            console.log(event)
-            const response = JSON.parse(event.target.response) 
-            if ('success' in response){
-                text_element.innerText = "Archivo subido correctamente"
-                text_element.style.color = "#0e8843"
+        // Prevent default behavior (Prevent file from being opened)
+        ev.preventDefault();
+      
+        if (ev.dataTransfer.items) {
+          // Use DataTransferItemList interface to access the file(s)
+          [...ev.dataTransfer.items].forEach((item, i) => {
+            // If dropped items aren't files, reject them
+            if (item.kind === "file") {
+              const file = item.getAsFile();
+              console.log(`… file[${i}].name = ${file.name}`);
             }
-        }catch(error){
-            save_error("upload_file", error.message )
-            console.error(error)
-            errorHandler(event)
+          });
+        } else {
+          // Use DataTransfer interface to access the file(s)
+          [...ev.dataTransfer.files].forEach((file, i) => {
+            console.log(`… file[${i}].name = ${file.name}`);
+          });
         }
-      
       }
+      function dragOverHandler(ev) {
+        console.log("File(s) in drop zone");
       
-      function errorHandler(event) {
-        text_element.style.color ="#9b0909"
-        text_element.innerHTML = "Error al subir archivo";
-        console.log(event)
-        save_error("upload_file", event.target.statusText )
+        // Prevent default behavior (Prevent file from being opened)
+        ev.preventDefault();
       }
-      
-  </script>
-{% endblock javascript %}
+</script>
+       
+
+        <a href="/" class="back expand" title="back"><img src="/static/back.png" alt="back"></a>
+        <h1>Subir archivo</h1>
+        <button type="button" id="select">Seleccionar archivo</button>
+        <input type="file" name="audio" id="audio" hidden>
+        <p id="text"></p>
+
+        {% endblock content %}
+
+        {% block javascript %}
+        <script>
+            const input_file = document.querySelector('input[type="file"]'),
+                text_element = document.getElementById("text");
+
+            document.getElementById("select").onclick = () => {
+                input_file.click()
+            }
+            input_file.addEventListener("change", async () => {
+                if (!checkFile()) {
+                    text_element.innerText =
+                        "Archivo inválido, solo puede subir archivos de audio (ejemplo: .mp3, .wav)"
+                    return
+                }
+                const data = new FormData();
+                data.append('audio', input_file.files[0]);
+                text_element.innerHTML = "Subiendo archivo <span>0%</span>"
+                const ajax = new XMLHttpRequest();
+                ajax.upload.addEventListener("progress", progressHandler, false);
+                ajax.addEventListener("loadend", completeHandler, false);
+                ajax.addEventListener("error", errorHandler, false);
+                ajax.addEventListener("abort", errorHandler, false);
+                ajax.open("POST", "/upload_file");
+                ajax.send(data);
+            })
+
+            function checkFile() {
+                const audio_formats = ['MP3', 'WAV', 'AAC', 'FLAC', 'OGG', 'WMA', 'ALAC', 'AIFF', 'M4A', 'AC3'];
+                let ext = input_file.files[0].name.split('.');
+                ext = ext[ext.length - 1];
+                return audio_formats.includes(ext.toUpperCase())
+            }
+
+            function progressHandler(event) {
+                const percent = (event.loaded / event.total) * 100;
+                const span = text_element.querySelector("span");
+                if (span) {
+                    console.log(Math.round(percent) + "%")
+                    span.innerText = Math.round(percent) + "%"
+                    console.log(text_element.innerText)
+                }
+            }
+
+            function completeHandler(event) {
+                try {
+                    console.log(event)
+                    const response = JSON.parse(event.target.response)
+                    if ('success' in response) {
+                        text_element.innerText = "Archivo subido correctamente"
+                        text_element.style.color = "#0e8843"
+                    }
+                } catch (error) {
+                    save_error("upload_file", error.message)
+                    console.error(error)
+                    errorHandler(event)
+                }
+
+            }
+
+            function errorHandler(event) {
+                text_element.style.color = "#9b0909"
+                text_element.innerHTML = "Error al subir archivo";
+                console.log(event)
+                save_error("upload_file", event.target.statusText)
+            }
+        </script>
+        {% endblock javascript %}
