--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,9 +103,26 @@ section{
     border: none;
     color: #004949;
 }
-.btn.success:hover{
+.btn.success:hover,.btn.success.disabled{
     background-color: #74A4A4;
     color: #208587;
+}
+.btn.success.disabled:hover{
+    cursor:not-allowed;
+}
+dialog{
+    border-radius: 12px;
+    background: #001C1C;
+    box-shadow: 0px 16px 48px 0px rgba(43, 17, 89, 0.17); 
+    color: white;
+    border: none;
+    padding: 20px 0;
+    width: 500px;
+    max-width: 95vw;
+    text-align: center;
+}
+::backdrop{
+    background-color: rgba(0, 73, 73, 0.70);
 }
 @media screen and (max-width:480px) {
     .profile-box{
