--- a/templates/new_template/index.html
+++ b/templates/new_template/index.html
@@ -1,24 +1,27 @@
 {% extends "new_template/base.html" %}
 {% block title %}
-  Inicio
+Inicio
 {% endblock title %}
 {% block style %}
 <style>
-    .btn{
-        color:white;
+    .btn {
+        color: white;
         display: inline-flex;
         align-items: center;
         margin: 0 10px;
         font-size: 16px;
         text-decoration: none;
     }
-    .btn img{
+
+    .btn img {
         margin: 0 10px
     }
-    .btn-box{
+
+    .btn-box {
         text-align: center;
     }
-    .audio-item{
+
+    .audio-item {
         position: relative;
         border-radius: 8px;
         background: rgba(0, 28, 28, 0.50);
@@ -28,47 +31,189 @@
         gap: 10px;
         grid-template-columns: 25px 1fr 25px 25px;
     }
-    .card{
+
+    .card {
         overflow-y: auto;
         padding: 16px;
         height: 400px;
         position: relative;
     }
-    .audio-txt{
+
+    .audio-txt {
         width: auto;
         padding: 0;
         text-decoration: none;
     }
-    .audio-txt:hover{
-        cursor:pointer;
+
+    .audio-txt:hover {
+        cursor: pointer;
     }
-    .audio-name{
+
+    .audio-name {
         color: rgba(255, 255, 255, 0.75);
-        text-overflow: ellipsis; 
+        text-overflow: ellipsis;
         font-size: 20px;
         margin: 0;
         text-align: left;
     }
-    .audio-date{
+
+    .audio-date {
         color: rgba(255, 255, 255, 0.40);
         font-size: 12px;
         margin: 0;
         text-align: left;
     }
-    .ico-link{
+
+    .ico-link {
         height: 25px;
     }
-    .empty p{
+
+    .empty p {
         color: rgba(255, 255, 255, 0.75);
         text-align: center;
-        font-size: 14px; 
+        font-size: 14px;
     }
-    .empty{
+
+    .empty {
         width: 300px;
         left: 50%;
         top: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         position: absolute;
+    }
+
+    #drop_zone {
+        border: 1px dashed #ACE5C6;
+        background: rgba(172, 229, 198, 0.20);
+        width: 355px;
+        text-align: center;
+        padding: 16px;
+        margin: 0 auto 20px auto;
+        border-radius: 8px;
+        position: relative;
+    }
+    #drop_zone.error{
+        border-color: "#D34D4D";
+    }
+
+    .backup-lg {
+        width: 48px;
+        height: 48px;
+    }
+
+    .drop-formats {
+        color: #B5C9C9;
+        font-size: 14px;
+        margin: 5px 0 0 0;
+    }
+
+    .drop-txt {
+        color: #FAFAFA;
+        font-size: 18px;
+        margin: 5px 0 0 0;
+    }
+
+    .drop-a {
+        color: #00CF83
+    }
+
+    .drop-title {
+        font-size: 24px;
+        color: #FAFAFA;
+    }
+
+    dialog {
+        background: #001C1C;
+    }
+
+    dialog .btn {
+        color: #ACE5C6;
+    }
+
+    .drop-info-txt {
+        font-size: 14px;
+    }
+
+    .dropping {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        background-color: #001c1cd7;
+        display: none;
+    }
+
+    .dropping p {
+        margin: auto 0;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 26px;
+    }
+    #text-drop{
+        font-size: 12px;
+    }
+    progress{
+        height: 3px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border: none;
+        background-color: transparent;
+        z-index: 1;
+        transform: translateY(50%);
+    }
+    .your-file{
+        position: relative;
+        width: 340px;
+        background-color: #004949;
+        border-radius: 4px;
+        border: 0.5px solid #B5C9C9;
+        font-size: 12px;
+        height: 26px;
+        padding: 10px 10px 0 10px;
+        text-align: left;
+        margin: 0 auto 10px auto;
+        display: none;
+    }
+    progress::-webkit-progress-value {
+        background-color: #00CF83;
+      }
+      
+    progress::-moz-progress-bar {
+        background-color: #00CF83;
+    }
+    progress::-webkit-progress-bar {
+        background-color: transparent;
+    }
+    .drop-audio-upload{
+        width: 350px;
+        position: relative;
+        padding: 15px 10px;
+        border-radius: 4px;
+        border: 1px solid #00CF83;
+        background: #004949; 
+        text-align: left;
+        margin: 0 auto;
+    }
+    .drop-audio-upload .trash{
+        position: absolute;
+        right: 5px;
+        top:50%;
+        transform: translateY(-50%);
+    }
+    .drop-audio-upload .trash img{
+        width: 20px;
+    }
+    .drop-audio-upload .audio{
+        margin-right: 5px;
+    }
+    #btn-repeat{
+        display: none;
     }
 </style>
 {% endblock style %}
@@ -78,47 +223,224 @@
         <img src="/static/images/micro.svg" alt="micrófono">
         Grabar audio
     </a>
-    <a class="btn" href="/upload_file">
+    <a class="btn" href="#" onclick="open_modal()">
         <img src="/static/images/cloud.svg" alt="">
         Subir audio
     </a>
 </div>
 <div class="card">
-   
     {% if audios %}
-        {% for audio in audios %}
-            <div class="audio-item" id="audio-{{loop.index}}">
-                <img src="/static/images/msg.svg">
-                <a href="/player/{{audio.name}}" class="audio-txt">
-                    <p class="audio-name">{{audio.name}}</p>
-                    <p class="audio-date">{{audio.date}}</p>
-                </a>
-                <a href="#" class="ico-link">
-                    <img src="/static/images/edit.svg" alt="editar">
-                </a>
-                <a href="#" class="ico-link" onclick="del_file(`{{audio.name}}`, `{{loop.index}}`)">
-                    <img src="/static/images/delete.svg" alt="eliminar">
-                </a>
-            </div>
-        {% endfor %}
+    {% for audio in audios %}
+    <div class="audio-item" id="audio-{{loop.index}}">
+        <img src="/static/images/msg.svg">
+        <a href="/player/{{audio.name}}" class="audio-txt">
+            <p class="audio-name">{{audio.name.replace("_"," ")}}</p>
+            <p class="audio-date">{{audio.date}}</p>
+        </a>
+        <a href="#" class="ico-link">
+            <img src="/static/images/edit.svg" alt="editar">
+        </a>
+        <a href="#" class="ico-link" onclick="del_file(`{{audio.name}}`, `{{loop.index}}`)">
+            <img src="/static/images/delete.svg" alt="eliminar">
+        </a>
+    </div>
+    {% endfor %}
     {% else %}
-        <div class="empty">
-            <img src="/static/images/find.svg" alt="buscar">
-            <p>Aquí verás tu historial de grabaciones. podrás revisar, vuelve a editar o eliminar sesiones</p>
-        </div>
+    <div class="empty">
+        <img src="/static/images/find.svg" alt="buscar">
+        <p>Aquí verás tu historial de grabaciones. podrás revisar, vuelve a editar o eliminar sesiones</p>
+    </div>
     {% endif %}
-    
+
 </div>
 {% endblock content %}
 
+{% block modal %}
+<dialog>
+    <img src="/static/images/backup_circle.svg" alt="">
+    <h3 class="drop-title">Subir audio</h3>
+    <div id="drop_zone">
+        <img src="/static/images/backup.svg" class="backup-lg" alt="">
+        <p class="drop-txt"><a href="#" class="drop-a">Sube</a> o arrastra tú audio</p>
+        <p class="drop-formats">Formatos aceptados: mp3, wav, m4a, ACC </p>
+        <input type="file" name="audio" hidden>
+    </div>
+    <style>
+        
+    </style>
+    <div class="drop-audio-upload" hidden>
+        <img class="audio" src="/static/images/micro.svg" alt="audio"><span></span>
+        <a href="#" class="trash"><img src="/static/images/trash.svg" alt="eliminar"></a>
+    </div>
+    <div class="dropping">
+        <p>Suelta el archivo aquí</p>
+    </div>
+    <!-- <p class="drop-info-txt">Tamaño máximo de archivo: 100mb</p>  -->
+    
+    <div class="your-file"><span id="filename"></span><progress max="100" value="0"></progress></div>
+    <p class="drop-formats" id="text-drop"></p>
+    <button type="button" class="btn" onclick="close_modal()" id="btn-cancel">Cancelar</button>
+    <button type="button" class="btn" onclick="show_dropzone()" id="btn-repeat" hidden>Subir otro</button>
+    <button type="button" class="btn success disabled" id="btn-go-audio">Ir al audio</button>
+</dialog>
+{% endblock modal %}
+
 {% block script %}
-  <script>
-    function del_file(audio, index){
-        fetch(`/del_file?filename=${audio}`).then(data=>data.json()).then(()=>{
+<script>
+    const btnCancel = document.getElementById("btn-cancel"),
+        btnGoAudio = document.getElementById("btn-go-audio"),
+        btnRepeat = document.getElementById("btn-repeat"),
+        dialog = document.querySelector("dialog"),
+        dropping = document.querySelector(".dropping"),
+        dropzone = document.getElementById("drop_zone"),
+        progressBar = document.querySelector("progress"),
+        your_file = document.querySelector(".your-file");
+    let filename = "",
+        dragCont1 = 0,
+        dragCont2 = 0;
+
+    const open_modal = () => dialog.showModal();
+    const close_modal = () => dialog.close()
+
+    function del_file(audio, index) {
+        fetch(`/del_file?filename=${audio}`).then(data => data.json()).then(() => {
             document.getElementById('audio-' + index).remove()
-        }).catch(()=>{
+        }).catch(() => {
             alert("No existe el archivo")
         })
     }
-  </script>
+    
+    
+    function show_dropzone(){
+        btnGoAudio.classList.add("disabled");
+        btnCancel.style.display = "inline-flex";
+        btnRepeat.style.display = "none";
+        dropzone.hidden = false;
+        document.querySelector("div.drop-audio-upload").hidden = true;
+    }
+
+    
+    /* DROPZONE */
+    function dropHandler(ev) {
+        ev.preventDefault();
+        let file
+        if (ev.dataTransfer.items) {
+            const item = ev.dataTransfer.items[0];
+            if (item.kind === "file") {
+                file = item.getAsFile();
+            }
+        } else {
+            file = ev.dataTransfer.files[0]
+        }
+        uploadFile(file);
+    }
+
+
+    function dragOverHandler(ev) {
+        ev.preventDefault();
+        if (dropping.style.display !== "block") {
+            dropping.style.display = "block"
+        }
+        dragCont1++
+    }
+
+
+    setInterval(() => {
+        if (dragCont1 === dragCont2) {
+            if (dropping.style.display === "block") {
+                dropping.style.display = "none";
+                dragCont1 = 0;
+                dragCont2 = 0;
+            }
+        } else {
+            dragCont1 = dragCont2
+        }
+    }, 100)
+
+
+    dialog.addEventListener("drop", dropHandler)
+    dialog.addEventListener("dragover", dragOverHandler)
+
+    /* FILE BUTTON */
+    const input_file = document.querySelector('input[type="file"]'),
+        text_element = document.getElementById("text-drop");
+
+    document.querySelector(".drop-a").onclick = () => {
+        input_file.click()
+    }
+
+    input_file.addEventListener("change", () => uploadFile(input_file.files[0]))
+
+   /* AJAX */
+    function uploadFile(file){
+        if (!checkFile()) {
+            text_element.innerText = "El archivo subido está en un formato no aceptado, intenta nuevamente";
+            text_element.style.color =  "#D34D4D"; 
+            dropzone.classList.add("error")
+            return
+        }
+        btnGoAudio.onclick = () => void(0) ;
+        text_element.innerText = ""
+        dropzone.classList.remove("error");
+        dropzone.hidden = true;
+        const data = new FormData();
+        data.append('audio', file);
+        filename = file.name;
+        let new_filename = filename;
+        if(filename.length > 40){
+            new_filename = filename.substring(0,40) + "..."
+        }
+        document.getElementById("filename").innerText = new_filename;
+        document.querySelector("div.drop-audio-upload").innerText = new_filename;
+        your_file.style.display = "block";
+        progressBar.value = "0";
+        const ajax = new XMLHttpRequest();
+        ajax.upload.addEventListener("progress", progressHandler, false);
+        ajax.addEventListener("loadend", completeHandler, false);
+        ajax.addEventListener("error", errorHandler, false);
+        ajax.addEventListener("abort", errorHandler, false);
+        ajax.open("POST", "/upload_file");
+        ajax.send(data);
+    }
+
+    function checkFile() {
+        const audio_formats = ['MP3', 'WAV', 'AAC', 'FLAC', 'OGG', 'WMA', 'ALAC', 'AIFF', 'M4A', 'AC3'];
+        let ext = input_file.files[0].name.split('.');
+        ext = ext[ext.length - 1];
+        return audio_formats.includes(ext.toUpperCase())
+    }
+
+    function progressHandler(event) {
+        const percent = (event.loaded / event.total) * 100;
+        progressBar.value = Math.round(percent)
+    }
+
+    function completeHandler(event) {
+        try {
+            const response = JSON.parse(event.target.response)
+            if ('success' in response) {
+                your_file.style.display = "none";
+                const div_audio = document.querySelector("div.drop-audio-upload");
+                div_audio.querySelector("span")
+                div_audio.hidden = false;
+                btnCancel.style.display = "none";
+                btnRepeat.style.display = "inline-flex";
+                btnGoAudio.classList.remove("disabled");
+                btnGoAudio.onclick = () => location.href = `/player/${filename}`
+            }
+        } catch (error) {
+            save_error("upload_file", error.message)
+            console.error(error)
+            errorHandler(event)
+        }
+    }
+
+    function errorHandler(event) {
+        text_element.style.color = "#D34D4D"
+        text_element.innerHTML = "Ocurrió un error subiendo el documento, intenta nuevamente";
+        dropzone.hidden = false
+        console.log(event)
+        save_error("upload_file", event.target.statusText)
+    }
+</script>
 {% endblock script %}
