--- a/templates/upload_file.html
+++ b/templates/upload_file.html
@@ -6,23 +6,51 @@
     }
 
     #drop_zone {
-        border: 1px dashed blue;
-        width: 200px;
-        height: 100px;
+        border: 1px dashed #ACE5C6;
+        background: rgba(172, 229, 198, 0.20); 
+        width: 336px; 
+        text-align: center;
+        padding: 16px;
       }
+     .backup-lg {
+        width: 48px;
+        height: 48px; 
+      }
+      .drop-formats{
+        color: #B5C9C9;
+        font-size: 14px; 
+        margin: 5px 0 0 0 ;
+      }
+      .drop-txt{
+        color: #FAFAFA;
+        font-size: 18px; 
+        margin: 5px 0 0 0 ;
+      }
+      .drop-a{
+        color:#00CF83
+      }
+      .drop-title{
+        font-size: 24px; 
+        color:#FAFAFA;
+      }
+      
 </style>
+
 <script src="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone-min.js"></script>
 <link href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" rel="stylesheet" type="text/css" />
 {% endblock head %}
 {% block content %}
-<!-- 
+<img src="/static/images/backup_circle.svg" alt="">
+<h3 class="drop-title">Subir audio</h3>
 <div
   id="drop_zone"
   ondrop="dropHandler(event);"
   ondragover="dragOverHandler(event);">
-  <p>Drag one or more files to this <i>drop zone</i>.</p>
+  <img src="/static/images/backup.svg" class="backup-lg" alt="">
+  <p class="drop-txt"><a href="" class="drop-a">Sube</a> o arrastra este audio</p>
+  <p class="drop-formats">Formatos aceptados: mp3, wav, m4a, ACC </p>
 </div>
--->
+
 <script>
     function dropHandler(ev) {
         console.log("File(s) dropped");
