--- a/templates/new_template/login.html
+++ b/templates/new_template/login.html
@@ -9,11 +9,24 @@
     <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="/static/css/login.css">
+    <style>
+        .img-login{
+            text-align: center;
+            background-color: #001C1C;;
+        }
+        .img-login img{
+            height: 100vh;
+            width: auto;
+            object-fit: contain;
+        }
+    </style>
 </head>
 
 <body>
     <main>
-        <img src="/static/images/login.webp" alt="login">
+        <div class="img-login">
+            <img src="/static/images/login.webp" alt="login">
+        </div>
         <form class="login" method="post">
             <h1>Ingresa ahora</h1>
             <label for="user">Usuario</label>
@@ -62,7 +75,7 @@
             }
 
         })
-
+        /** @param {string} text */
         function toast(text) {
             Toastify({
                 text: text,
