--- a/templates/new_template/index.html
+++ b/templates/new_template/index.html
@@ -215,6 +215,10 @@ Inicio
     #btn-repeat{
         display: none;
     }
+    .btn-box .btn{
+        width: 145px;
+        margin: 10px;
+    }
 </style>
 {% endblock style %}
 {% block content %}
