refactor finished and interview new template

--- a/templates/interview.html
+++ b/templates/interview.html
@@ -56,12 +56,12 @@
         max-width: 80%;
     }
     .msg1 span{
-        background-color: #c4dcf0;
+        background-color: #3f6382;
         text-align: right;
         border-bottom-right-radius: 1px;
     }
     .msg2 span{
-        background-color: #cff0c4;
+        background-color: rgba(172, 229, 198, 0.20);
         text-align: left;
         border-bottom-left-radius: 1px;
     }
