--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -30,7 +30,7 @@
             </div>
             <div class="profile-box">
                 <span>{{session['user']}}</span>
-                <a href="/interview" class="profile-icon">
+                <a href="/interview" class="profile-icon" title="Entrevista">
                     <svg width="25" height="25" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0_38_897" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="17">
                         <rect y="0.5" width="16" height="16" fill="#D9D9D9"/>
