--- a/static/css/style.0.0.1.css
+++ b/static/css/style.0.0.1.css
@@ -125,7 +125,7 @@ dialog{
     background-color: rgba(0, 73, 73, 0.70);
 }
 @media screen and (max-width:480px) {
-    .profile-box{
+    .profile-box span{
         display: none;
     }
 }
