--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourVoice | {% block title %}{% endblock title %}</title>
     <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.0.0.1.css">
     {% block style %}{% endblock style %}
 </head>
 <body>
