--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -106,10 +106,10 @@
             overflow-y: auto;
             border-radius: 8px;
             border: 1px solid  #B5C9C9;
-            background: #ffffff77;
+            background: #001919;
             height: 90px;
             padding: 10px;
-            color: black;
+            color: white;
             font-size: 18px;
             padding-right: 35px;
         }
@@ -121,6 +121,10 @@
             top: 50%;
             transform: translateY(-50%);
             right: 15px;
+            color: white;
+        }
+        .send:hover{
+            color: rgb(116, 111, 111);
         }
         .msg a{
             color: #00FFA1;
@@ -134,27 +138,11 @@
     <span>Volver</span>
 </a>
 <div class="card">
-    <h1 class="title">Entrevistador</h1>
-    <form action="">
-        <div class="form-control">
-            <label for="position">Cargo</label>
-            <input type="text" class="styled" name="position" id="position" placeholder="Ej: Gerente de Ventas">
-        </div>
-        <div class="form-control">
-            <label for="xp_years">Años de experiencia</label>
-            <input type="text" class="styled" name="xp_years" id="xp_years" placeholder="Ej: 10">
-        </div >
-        <div class="form-control">
-            <label for="skills">Habilidades principales</label>
-            <input type="text" class="styled" name="skills" id="skills" placeholder="Ej: Ventas b2b">
-        </div>
-        
-        <button class="btn" type="button" onclick="init_interview()">Enviar</button>
-    </form>
+    <h1 class="title">Chat</h1>
     <div id="historyContent"></div>
-    <div class="card-footer" hidden>
-        <textarea id="questionGPT" hidden></textarea>
-        <a class="send" href="#" id="sendGPT" onclick="answerGPT()" hidden>
+    <div class="card-footer" >
+        <textarea id="questionGPT" ></textarea>
+        <a class="send" href="#" id="sendGPT" onclick="answerGPT()">
             <svg width="25" height="24" viewBox="0 0 25 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
                 class="gpt-send">
                 <mask id="mask0_38_875" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="25"
@@ -180,17 +168,6 @@
     /** @type {HTMLElement} */
     let current_msg; 
 
-    function init_interview(){
-        const form = document.forms[0];
-        const body = new FormData(form);
-        add_loader();
-        const data = Object.fromEntries(body.entries());
-        current_msg = createMsg(2);
-        document.querySelector(".card-footer").hidden = false;
-        form.style.display = "none"
-        socket.emit("start_interview", data);
-    }
-
     function add_loader(){
         const p = document.createElement("p");
         p.id = "generando";;
@@ -214,58 +191,7 @@
 
     socket.on('chatEnd', () => {
         document.getElementById("generando").remove();
-        convert2hyperlink();
     })
-
-
-    function convert2hyperlink(){
-        let textList = current_msg.innerText.split("\n");
-        let loop_times = 0;
-        let pass_number = false;
-        for(let f=0; f < textList.length; f++){
-            console.log(textList[f])
-            if(has_number(textList[f])  && !pass_number){
-                pass_number =  true;
-                console.log("1st conditional")
-                continue
-            }
-            if(!pass_number) {
-                console.log("2nd conditional")
-                continue
-            }
-            if(is_item_list(textList[f])){
-                if(loop_times < 3){
-                    loop_times++;
-                }else{
-                    break
-                }
-                textList[f] = "<a href='#' onclick='choose(this)'>" + textList[f] + "</a><br>";
-            }
-        }
-        current_msg.innerHTML = textList.join('<br>');
-    }
-
-    /** @param {HTMLAnchorElement} anchor */
-    function choose(anchor){
-        document.getElementById("questionGPT").value = anchor.innerText;
-        current_msg.querySelectorAll("a").forEach(inner_anchor=>{
-            inner_anchor.removeAttribute("href");
-            inner_anchor.onclick = void(0);
-        })
-        answerGPT();
-    }
-
-    function has_number(str){
-        return /\d/.test(str)
-    }
-
-    /** @param {string} text */
-    function is_item_list(text){
-        if(text.toLowerCase().includes("a)")) return true;
-        if(text.toLowerCase().includes("b)")) return true;
-        if(text.toLowerCase().includes("c)")) return true;
-        return false;
-    }
 
 
     function createMsg(msg_num, msg=""){
