template # replaced for javascript void

--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -142,7 +142,7 @@
     <div id="historyContent"></div>
     <div class="card-footer" >
         <textarea id="questionGPT" ></textarea>
-        <a class="send" href="#" id="sendGPT" onclick="answerGPT()">
+        <a class="send" href="javascript:void(0)" id="sendGPT" onclick="answerGPT()">
             <svg width="25" height="24" viewBox="0 0 25 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
                 class="gpt-send">
                 <mask id="mask0_38_875" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="25"
