--- a/templates/new_template/hutrit_interview.html
+++ b/templates/new_template/hutrit_interview.html
@@ -159,7 +159,7 @@
     <div id="historyContent"></div>
     <div class="card-footer" hidden>
         <textarea id="questionGPT" ></textarea>
-        <a class="send" href="#" id="sendGPT" onclick="answerGPT()" >
+        <a class="send" href="javascript:void(0)" id="sendGPT" onclick="answerGPT()" >
             <svg width="25" height="24" viewBox="0 0 25 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
                 class="gpt-send">
                 <mask id="mask0_38_875" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="25"
@@ -246,7 +246,7 @@
                 }else{
                     break
                 }
-                textList[f] = "<a href='#' onclick='choose(this)'>" + textList[f] + "</a><br>";
+                textList[f] = "<a href='javascript:void(0)' onclick='choose(this)'>" + textList[f] + "</a><br>";
             }
         }
         current_msg.innerHTML = textList.join('<br>');
